# kolner-adressen-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  kolner-adressen.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  config.lua  features.lua  kolner-adressen.rockspec  kolner-adressen_sdk.lua  (+1 more)
php/: AGENTS.md  (+7 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  kolneradressen_sdk.py  kolneradressen_types.py  pyproject.toml
py/core/: context.py  control.py  error.py  helpers.py  response.py  result.py  utility_type.py
py/entity/: address_entity.py  datastore_search_entity.py
py/feature/: base_feature.py  cache_feature.py  log_feature.py  metrics_feature.py  netsim_feature.py  retry_feature.py  telemetry_feature.py  test_feature.py
py/test/: runner.py  test_address_direct.py  test_address_entity.py  test_datastore_search_direct.py  test_datastore_search_entity.py  test_exists.py  test_feature.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: done.py  fetcher.py  make_context.py  make_error.py  make_fetch_def.py  make_options.py  make_point.py  make_request.py  make_response.py  make_result.py  make_spec.py  param.py  prepare_auth.py  prepare_headers.py  prepare_method.py  register.py  result_basic.py
(+433 files in other folders)
